testing to see if select from contact form is black and the send button is black, testing to make sure it works on iphones

--- a/src/Styles/contact_form_styles.scss
+++ b/src/Styles/contact_form_styles.scss
@@ -137,6 +137,7 @@
     font-weight: 500;
     // width: 8em;
     padding: 0.5em;
+    color: black;
 }
 
 form h1 { 
@@ -176,6 +177,7 @@ form h1 {
 
 .contact-form-services-container select { 
     width: 100%;
+    color: black;
 }
 
 .contact-form-name-container img,
